# dm-manager-env

./: .gitignore  Dockerfile  README.md  app.py  baseline_results.json  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  validate-submission.sh  validation-results.txt
server/: app.py
