[project]
name = "dm-manager"
version = "1.0.0"
description = "DM Manager OpenEnv — Real-world DM inbox management environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "openai>=1.55.3",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
